syntax = "proto3";

package ProductsPackage;

service ProductsService {
    rpc getAllProducts(ProductPaginate) returns (Products) {}
    rpc getProductById(ProductId) returns (Product) {}
    rpc getTotalPages(Size) returns (PagesResponse) {}


    rpc createProduct(Product) returns (Product) {}
    rpc updateProduct(UpdateProduct) returns (Product) {}
    rpc deleteProduct(ProductId) returns (Product) {}
}

service ReviewsService {
    rpc getAllReviews (Empty) returns (Reviews) {}
    rpc getReviewById (ReviewId) returns (Review) {}
    rpc getProductsReviews(ProductId) returns (ProductsReviews) {}
    rpc getUserReviews (UserId) returns (UserReviews) {}

    rpc createReview (Review) returns (Review) {}
    rpc updateReview (UpdateReview) returns (Review) {}
    rpc deleteReview (ReviewId) returns (Review) {}
}

message Empty {}

message ProductPaginate {
    int32 size = 1;
    int32 page = 2;
}

message Size {
    int32 size = 1;
}

message PagesResponse {
    int32 totalPages = 1;
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    int32 stock = 4;
    bool disabled = 5;
    string platform = 6;
    float score = 7;
    string distributor = 8;
    string developer = 9;
    string genre = 10;
    string description = 11;
    string trailer = 12;
    string mainImage = 13;
    repeated string images = 14;
    int32 amount = 15;
    float discount = 16;
}

message Products {
    repeated Product products = 1;
}

message ProductId {
    string productId = 1;
}


message UpdateProduct {
    string productId = 1;
    Product product = 2;
}

message Review {
    string id = 1;
    string title = 2;
    string comment = 3;
    int32 rating = 4;
    string productId = 5;
    string userId = 6;
}

message UpdateReview {
    string userId = 1;
    Review updateReview = 2; 
}

message ReviewId {
    string reviewId = 1;
}

message Reviews {
    repeated Review reviews = 1;
}

message UserId {
    string userId = 1;
}

message ProductsReviews {
    Product product = 1;
    repeated Review Reviews = 2;
}

message UserReview {
    Review userReviews = 1;
    Product userProduct = 2;
}

message UserReviews {
    repeated UserReview userReviews = 1;
}